syntax = "proto3";

package quiz;
option go_package = "/proto;proto";

service QuizService {
  rpc GetScore(GetScoreRequest) returns (GetScoreResponse);
}

message GetScoreRequest {
  int32 quiz_id = 1;
}

message GetScoreResponse {
  repeated Score scores = 1;
}

message Score {
  int32 user_id = 1;
  int32 quiz_id = 2;
  int32 score = 3;
}

